--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -110,7 +110,7 @@ $chatActionsSeparatorColor: rgb(173, 105, 112);
 $chatHeaderBackgroundColor: rgba(42, 58, 75, 0.9);
 $chatInputSeparatorColor: #A4B8D1;
 // $chatLocalMessageBackgroundColor: rgb(4, 98, 178);
-$chatLocalMessageBackgroundColor: #2c4152;
+$chatLocalMessageBackgroundColor: #2f8db0;
 $chatPrivateMessageBackgroundColor: rgb(153, 69, 77);
 // $chatRemoteMessageBackgroundColor:  rgb(86, 101, 114);
 $chatRemoteMessageBackgroundColor:  #FFF;
