--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -1,7 +1,6 @@
 @media only screen and (max-width: $smallScreen) {
     .watermark {
-        width: 20%;
-        height: 20%;
+       
     }
 
     .new-toolbox {
@@ -9,18 +8,17 @@
             .button-group-center, .button-group-left, .button-group-right {
                 .toolbox-button {
                     .toolbox-icon {
-                        width: 28px;
-                        height: 28px;
+                        width: 38px;
+                        height: 38px;
                         svg {
-                            width: 18px;
-                            height: 18px;
+                            width: 22px;
+                            height: 22px;
                         }
                     }
 
                     &:nth-child(2) {
                         .toolbox-icon {
-                            width: 30px;
-                            height: 30px;
+                 
                         }
                     }
                 }
@@ -46,18 +44,17 @@
                 }
                 .toolbox-button {
                     .toolbox-icon {
-                        width: 18px;
-                        height: 18px;
+                        width: 38px !important;
+                        height: 38px !important;
                         svg {
-                            width: 12px;
-                            height: 12px;
+                            width: 22px;
+                            height: 22px;
                         }
                     }
 
                     &:nth-child(2) {
                         .toolbox-icon {
-                            width: 20px;
-                            height: 20px;
+                        
                         }
                     }
                 }
