--- a/css/components/_input-control.scss
+++ b/css/components/_input-control.scss
@@ -3,11 +3,12 @@
     display: inline-block;
     width: 100%;
     padding: 5px 7px;
-    border-radius: $borderRadius;
+    border-radius: 3px;
     line-height: 32px;
     height: 32px;
     text-align: left;
     margin-bottom: 8px;
+    border: 1px solid #DDD;
 
     &:last-child {
         margin-bottom: inherit;
