--- a/css/themes/_light.scss
+++ b/css/themes/_light.scss
@@ -15,10 +15,10 @@ $sliderThumbBackground: #3572b0;
 * Buttons
 */
 $buttonBackground: #44A5FF;
-$buttonHoverBackground: #2c4062;
+$buttonHoverBackground: #f1f1f1;
 $buttonBorder: transparent;
 $buttonHoverBorder: transparent;
-$buttonColor: #eceef1;
+$buttonColor: #4769a0;
 
 $buttonLightBackground: #f5f5f5;
 $buttonLightHoverBackground: #e9e9e9;
@@ -28,8 +28,8 @@ $buttonLightHoverBorder: #999;
 $buttonLinkBackground: transparent;
 $buttonLinkColor: #0090e8;
 
-$primaryButtonBackground: #3572b0;
-$primaryButtonHoverBackground: #2a67a5;
+$primaryButtonBackground: #4C9AFF;
+$primaryButtonHoverBackground: #2c78da;
 $primaryButtonColor: $baseLight;
 $primaryButtonFontWeight: 400;
 
@@ -47,11 +47,11 @@ $reloadProgressBarBg: #0074E0;
 /**
  * Dialog colors
  **/
-$auiDialogColor: #eceef1;
-$auiDialogBg: #253858;
-$auiDialogContentBg: #344563;
-$auiBorderColor: #253858;
-$dialogTitleFontWeight: 400;
+$auiDialogColor: #4769a0;
+$auiDialogBg: #ffffff;
+$auiDialogContentBg: #ffffff;
+$auiBorderColor: #eaeaea;
+$dialogTitleFontWeight: 600;
 $dialogErrorText: #344563;
 
 /**
