--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -83,12 +83,15 @@
 }
 
 #chat-recipient {
-    align-items: center;
     background-color: $chatPrivateMessageBackgroundColor;
+    align-items: center;
     display: flex;
     flex-direction: row;
     font-weight: 100;
     padding: 10px;
+    width: 70%;
+    margin: 0 auto;
+    border-radius: 10px 10px 0 0;
 
     span {
         color: white;
