--- a/css/filmstrip/_vertical_filmstrip_overrides.scss
+++ b/css/filmstrip/_vertical_filmstrip_overrides.scss
@@ -99,26 +99,26 @@
         display: inline-block;
     }
 
-    .indicator-container {
-        float: none;
-        width: 40px;
-        height: 40px;
-        margin: 0 4px;
-        border-radius: 50%;
-        overflow: hidden;
-        // border: 2px solid rgba(210, 210, 210, .7);
-        padding: 2px; 
-        &.connection-indicator, &.show-connection-indicator {
-            // display: none;
-        }
-        .jitsi-icon {
-            svg {
-                fill: #FFF;
-                height: 30px;
-                width: 30px;
-            }
-        }
-    }
+    // .indicator-container {
+    //     float: none;
+    //     width: 40px;
+    //     height: 40px;
+    //     margin: 0 4px;
+    //     border-radius: 50%;
+    //     overflow: hidden;
+    //     // border: 2px solid rgba(210, 210, 210, .7);
+    //     padding: 2px; 
+    //     &.connection-indicator, &.show-connection-indicator {
+    //         // display: none;
+    //     }
+    //     .jitsi-icon {
+    //         svg {
+    //             fill: #FFF;
+    //             height: 30px;
+    //             width: 30px;
+    //         }
+    //     }
+    // }
 
     /**
      * Move the remote video menu trigger to the bottom left of the video
